fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/Vascular_Sales_Data__c.object-meta.xml
<CustomObject>
    <label>Vascular Sales Data</label>
    <nameField>
        <displayFormat>VS-{0000000000}</displayFormat>
        <label>Vascular Sales Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vascular Sales Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>