fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>