fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>