fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Ciy__c.field-meta.xml
<CustomField>
    <fullName>Ciy__c</fullName>
    <label>Ciy</label>
    <length>64</length>
    <type>Text</type>
</CustomField>