fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Commission_Category__c.field-meta.xml
<CustomField>
    <fullName>Commission_Category__c</fullName>
    <label>Commission Category</label>
    <length>64</length>
    <type>Text</type>
</CustomField>