fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Current_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_Sales__c</fullName>
    <label>Current YTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>