fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Direct_or_JIT__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_JIT__c</fullName>
    <label>Direct or JIT</label>
    <length>64</length>
    <type>Text</type>
</CustomField>