fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Previous_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Previous_YTD_Sales__c</fullName>
    <label>Previous YTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>