fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Product_Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Marketing_Code__c</fullName>
    <label>Product Marketing Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>