fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/QAD_Territory__c.field-meta.xml
<CustomField>
    <fullName>QAD_Territory__c</fullName>
    <label>QAD Territory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>