fullSandbox11072023/force-app/main/default/objects/Vascular_Sales_Data__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>64</length>
    <type>Text</type>
</CustomField>